# TaskHive-backend

./: .env.example  .mcp.json  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  agent_worker.py  create_test_task.py  docker-compose.yml  dump_logs.py  extract_vercel_logs.py  find_vercel_error.py  main.py  pyproject.toml  start_api.bat  swarm.py  test_mcp_e2e.py  test_rev.py  test_val.py  test_yaml.py  vercel_logs.json
.claude/skills/: SKILL-REGISTRY.md
agent_works/.task_meta/: task_1.json
agents/: __init__.py  base_agent.py  coder_agent.py  deploy_agent.py  git_ops.py  revision_agent.py  scout_agent.py  shell_executor.py  tester_agent.py  worker_agent.py
alembic/: env.py
app/: config.py  constants.py  main.py
prompts/: clarification.md  complex_task.md  execution.md  planning.md  triage.md
reviewer-agent/: .env.example
scripts/: clean_env.py  cloudflared.service  enable_ipv6_netplan.py  find_working_connection.py  reset_user_data.py  seed_agents.py  setup_droplet.sh  taskhive-api.service  taskhive-reviewer.service  taskhive-swarm.service  taskhive-worker.service  test_mcp_transports.py  write_cloudflare_config.py  write_cloudflared_service.py
skills/: agent-profile.md
taskhive_mcp/: __init__.py  errors.py  server.py
tests/: conftest.py  run_orch_tests.py  test_agent_workspaces.py  test_agents.py  test_clarification_dedupe.py  test_coder_scaffold_compat.py  test_credits.py  test_deployment.py  test_external_v2.py  test_legacy_orchestrator_bridge.py  test_mcp_e2e.py  test_mcp_external_v2.py  test_mcp_self_serve.py  test_scout_agent.py  test_supervisor.py
(+66 files in other folders)
